# UdemyCppPro

./: .gitignore
2_Makefile/1_HelloWorld/: Makefile  main.s
2_Makefile/2_BasicStructure/: Makefile
2_Makefile/3_CompilerFlags/: Makefile
2_Makefile/4_WildcardFiles/: Makefile  my_lib.cc
2_Makefile/5_MakefileTemplate/: Makefile
3_CMake/1_HelloWorld/: CMakeLists.txt
Chapter02/1_HelloWorld/: Makefile  main.i
Chapter02/2_BasicStructure/: Makefile  main
Chapter02/3_CompilerFlags/: Makefile  main
Chapter02/4_WildcardFiles/: main
Chapter03/: Makefile
Chapter03/01_HelloWorld/: CMakeLists.txt
Chapter03/02_BasicProject/: CMakeLists.txt
Chapter03/03_IntermediateProject/: CMakeLists.txt
Chapter03/04_VariablesOptions/: CMakeLists.txt
Chapter03/04_VariablesOptions/src/my_lib/: my_lib.cc
Chapter03/05_ConfigureFile/app/: main.cc
Chapter03/06_BetterProject/: CMakeLists.txt
Chapter03/07_Submodules/: CMakeLists.txt
Chapter03/07_Submodules/src/my_lib/: CMakeLists.txt
Chapter03/08_FetchContent/: CMakeLists.txt  Makefile
Chapter03/08_FetchContent/app/: main.cc
Chapter03/08_FetchContent/src/my_lib/: CMakeLists.txt
Chapter03/09_Doxygen/: CMakeLists.txt
Chapter03/09_Doxygen/docs/: DoxyfileOld
Chapter03/09_Doxygen/src/my_lib/: my_lib.cc
Chapter03/10_Unittests/: CMakeLists.txt
Chapter03/10_Unittests/src/my_lib/: my_lib.cc  my_lib.h
Chapter03/10_Unittests/tests/: CMakeLists.txt
